--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
   "dependencies": {
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "next": "15.3.4"
+    "next": "15.3.4",
+    "zustand": "^4.4.1",
+    "axios": "^1.5.0",
+    "lucide-react": "^0.469.0"
   },
   "devDependencies": {
     "typescript": "^5",
